fix: make too wide code blocks scrollable

--- a/src/assets/css/richtext.scss
+++ b/src/assets/css/richtext.scss
@@ -123,6 +123,7 @@
     padding: 1rem 1.5rem;
     margin: 20px auto;
     display: block;
+    overflow-x: auto;
 
     code {
       background-color: transparent;
